--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<h1>Hello World Wide Web!</h1>
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
+    <script src="https://unpkg.com/hydra-synth@1.3.29/dist/hydra-synth.js"></script>
+  </head>
+  <body>
+    <div id="hydra-wrapper"></div>
+
+    <a-scene>
+      <a-assets>
+        <!-- Replace with your file paths; you can omit the MTL if not needed -->
+        <a-asset-item id="model-obj" src="hirezskull_final.obj"></a-asset-item>
+        <!-- <a-asset-item id="model-mtl" src="models/myModel.mtl"></a-asset-item> -->
+      </a-assets>
+
+      <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky> -->
+
+      <a-entity
+        obj-model="obj: #model-obj;"
+        material="src: #hydraCanvas; shader: flat; side: double"
+        position="0 1.2 -3"
+        rotation="0 45 0"
+        scale="1 1 1"
+        shadow="cast: true; receive: true">
+      </a-entity>
+
+      <a-entity light="type: ambient; intensity: 0.35"></a-entity>
+      <a-entity light="type: directional; intensity: 0.9; castShadow: true" position="2 4 2"></a-entity>
+      <a-plane rotation="-90 0 0" width="20" height="20" color="#222" shadow="receive: true"></a-plane>
+
+      <a-entity position="0 1.6 0">
+        <a-camera wasd-controls look-controls></a-camera>
+      </a-entity>
+
+      <a-sky color="light-blue"></a-sky>
+    </a-scene>
+
+    <script>
+      /* global Hydra, osc, o0 */
+      function setupHydra () {
+        // create canvas and give it an id so A-Frame can refer to it
+        const canvas = document.createElement('canvas')
+        canvas.id = 'hydraCanvas'
+        canvas.width = 600
+        canvas.height = 600
+        // append to DOM (visible). You can hide it with CSS if you want.
+        document.getElementById('hydra-wrapper').appendChild(canvas)
+
+        const hydra = new Hydra({
+          canvas,
+          detectAudio: false
+        })
+
+        // simple hydra sketch
+        osc(20, 0.01, 1.1)
+          .kaleid(5)
+          .color(2.83, 0.91, 0.39)
+          .rotate(0, 0.1)
+          .modulate(o0, () => mouse.x * 0.0003)
+          .scale(1.01)
+          .out(o0)
+      }
+
+      window.addEventListener('load', setupHydra)
+    </script>
+  </body>
+</html>
