--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <script src="https://unpkg.com/hydra-synth@1.3.29/dist/hydra-synth.js"></script>
   </head>
   <body>
-    <div id="hydra-wrapper"></div>
+<!--     <div id="hydra-wrapper"></div> -->
 
-    <a-scene>
+    <a-scene   
+      background="color: #000"
+      webxr="optionalFeatures: local-floor, bounded-floor, hand-tracking"
+      vr-mode-ui="enabled: true">
       <a-assets>
         <!-- Replace with your file paths; you can omit the MTL if not needed -->
         <a-asset-item id="model-obj" src="hirezskull_final.obj"></a-asset-item>
         <!-- <a-asset-item id="model-mtl" src="models/myModel.mtl"></a-asset-item> -->
       </a-assets>
+      
 
       <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
@@ -21,7 +25,6 @@
 
       <a-entity
         obj-model="obj: #model-obj;"
-        material="src: #hydraCanvas; shader: flat; side: double"
         position="0 1.2 -3"
         rotation="0 45 0"
         scale="1 1 1"
